# Knowrob_Medicine-knowledge-Graph

./: README.md
json_prolog/include/json_prolog/: prolog.h  prolog_bindings.h  prolog_query_proxy.h
medicine/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
medicine/launch/: medicine.launch
medicine/owl/: herbnet-sample.owl
medicine/prolog/: init.pl
medicine/scripts/: medicineTest.cpp  medicineTest.py
